--- a/RAG.ipynb
+++ b/RAG.ipynb
@@ -16,7 +16,7 @@
    ],
    "source": [
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
-    "from langchain.embeddings import HuggingFaceEmbeddings\n",
+    "from langchain_community.embeddings import HuggingFaceEmbeddings\n",
     "from langchain_community.vectorstores import Neo4jVector\n",
     "from unstructured.partition.pdf import partition_pdf\n",
     "from unstructured.chunking.title import chunk_by_title\n",
@@ -25,9 +25,11 @@
     "from dotenv import load_dotenv\n",
     "import os\n",
     "from langchain_google_genai import ChatGoogleGenerativeAI\n",
-    "from langchain import PromptTemplate\n",
+    "from langchain_core.prompts import PromptTemplate\n",
     "from langchain.schema import StrOutputParser\n",
     "from langchain.schema.runnable import RunnablePassthrough\n",
+    "from neo4j import GraphDatabase\n",
+    "\n",
     "\n",
     "load_dotenv('.env', override=True)\n",
     "\n",
@@ -36,8 +38,7 @@
     "NEO4J_USER = os.getenv('NEO4J_USERNAME')\n",
     "NEO4J_PASSWORD = os.getenv('NEO4J_PASSWORD')\n",
     "NEO4J_DATABASE = os.getenv('NEO4J_DATABASE') or 'neo4j'\n",
-    "GEMINI_API_KEY = os.getenv('GEMINI_API_KEY')\n",
-    "\n"
+    "GEMINI_API_KEY = os.getenv('GEMINI_API_KEY')"
    ]
   },
   {
@@ -170,11 +171,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1526/1526 [01:19<00:00, 19.10it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "driver = GraphDatabase.driver(NEO4J_URL, database=NEO4J_DATABASE, auth=(NEO4J_USER, NEO4J_PASSWORD))\n",
+    "\n",
+    "with driver.session() as session:\n",
+    "    for doc in tqdm(docs):\n",
+    "        # Create a node for each document\n",
+    "        session.run(\n",
+    "            \"CREATE (d:Document {id: $id, content: $content, page_number: $page_number})\",\n",
+    "            id=doc.metadata[\"chunk_seq_id\"],\n",
+    "            content=doc.page_content,\n",
+    "            page_number=doc.metadata[\"page_number\"],\n",
+    "        )\n",
+    "\n",
+    "        # Create relationships between documents based on similarity\n",
+    "        similar_docs = vector_store.similarity_search(doc.page_content, k=5)\n",
+    "        for similar_doc in similar_docs:\n",
+    "            if similar_doc.metadata[\"chunk_seq_id\"] != doc.metadata[\"chunk_seq_id\"]:\n",
+    "                session.run(\n",
+    "                    \"MATCH (d1:Document {id: $id1}), (d2:Document {id: $id2}) \"\n",
+    "                    \"CREATE (d1)-[:SIMILAR_TO]->(d2)\",\n",
+    "                    id1=doc.metadata[\"chunk_seq_id\"],\n",
+    "                    id2=similar_doc.metadata[\"chunk_seq_id\"],\n",
+    "                )\n",
+    "\n",
+    "driver.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "retriever = vector_store.as_retriever(search_kwargs={\"k\": 5, \"threshold\": 0.7})\n",
+    "retriever = vector_store.as_retriever(search_kwargs={\"k\": 5})\n",
     "\n",
     "# Initialize the Gemini model\n",
     "llm = ChatGoogleGenerativeAI(model=\"gemini-pro\", google_api_key=GEMINI_API_KEY)\n",
@@ -182,7 +224,7 @@
     "# Prompt template to query Gemini\n",
     "llm_prompt_template = \"\"\"You are an assistant for question-answering tasks.\n",
     "Use the following context to answer the question.\n",
-    "Use five sentences maximum and keep the answer concise.\\n\n",
+    "Use five sentences minimum and keep the answer concise.\\n\n",
     "Question: {question} \\nContext: {context} \\nAnswer:\"\"\"\n",
     "\n",
     "llm_prompt = PromptTemplate.from_template(llm_prompt_template)\n",
@@ -222,43 +264,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1526/1526 [01:19<00:00, 19.10it/s]\n"
-     ]
-    }
-   ],
    "source": [
-    "from neo4j import GraphDatabase\n",
-    "\n",
-    "driver = GraphDatabase.driver(NEO4J_URL, database=NEO4J_DATABASE, auth=(NEO4J_USER, NEO4J_PASSWORD))\n",
-    "\n",
-    "with driver.session() as session:\n",
-    "    for doc in tqdm(docs):\n",
-    "        # Create a node for each document\n",
-    "        session.run(\n",
-    "            \"CREATE (d:Document {id: $id, content: $content})\",\n",
-    "            id=doc.metadata[\"chunk_seq_id\"],\n",
-    "            content=doc.page_content,\n",
-    "        )\n",
-    "\n",
-    "        # Create relationships between documents based on similarity\n",
-    "        similar_docs = vector_store.similarity_search(doc.page_content, k=5, threshold=0.7)\n",
-    "        for similar_doc in similar_docs:\n",
-    "            if similar_doc.metadata[\"chunk_seq_id\"] != doc.metadata[\"chunk_seq_id\"]:\n",
-    "                session.run(\n",
-    "                    \"MATCH (d1:Document {id: $id1}), (d2:Document {id: $id2}) \"\n",
-    "                    \"CREATE (d1)-[:SIMILAR_TO]->(d2)\",\n",
-    "                    id1=doc.metadata[\"chunk_seq_id\"],\n",
-    "                    id2=similar_doc.metadata[\"chunk_seq_id\"],\n",
-    "                )"
+    "## Show similarities between two documents"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
